--- a/webook/docker-compose.yaml
+++ b/webook/docker-compose.yaml
@@ -13,3 +13,10 @@ services:
     ports:
       # 映射为了13316端口
       - "13316:3306"
+
+  redis:
+    image: 'bitnami/redis:latest'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - '6379:6379'
