--- a/webook/docker-compose.yaml
+++ b/webook/docker-compose.yaml
@@ -20,3 +20,11 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - '6379:6379'
+
+  etcd:
+    image: 'bitnami/etcd:latest'
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+    ports:
+    # 用12379端口来链接etcd
+      - 12379:2379
