--- a/webook/config/dev.yaml
+++ b/webook/config/dev.yaml
@@ -1,4 +1,9 @@
 db:
   dsn: "root:root@tcp(localhost:13316)/webook"
+  
 redis:
   addr: "localhost:6379"
+
+kafka:
+  addrs:
+    - "localhost:9094"
